# little-python-computer

./: README.md  example.lpc  pyproject.toml
src/: agent.py  cmd.py  example.lmc  main.py  parts.py
src/lpc/: cmd.py  main.py  parts.py
