[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "little-python-computer"
version = "0.1.0"
dependencies = [
    "arglite"
]

readme = "README.md"
description = "Python implementation of the Little Man Computer."

[project.scripts]
lpc = "lpc:main.main"
