[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "little-python-computer"
version = "0.2.2"
dependencies = [
    "arglite"
]
authors = [
    {name = "Douglas Luman", email = "dluman@allegheny.edu"}
]
readme = "README.md"
description = "Python implementation of the Little Man Computer with additional SFT instruction."

[project.scripts]
lpc = "lpc:main.main"
